added table again

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -152,24 +152,45 @@ In light of research described in the literature reviewed the team will be able 
 
 
 \subsection{Requirements}
-Below is a table showing a list of requirements for our sytem (please see Appendix xx for a full elaboration of the requirement pattern).
-
-The table \ref{table:1} is an example of referenced \LaTeX elements.
- 
+Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see Appendix xx for a full elaboration of our requirement patterns).
 \begin{table}[h!]
+\renewcommand{\arraystretch}{1.5}
 \centering
-\begin{tabular}{||c c c c||} 
+\begin{tabular}{| l ||} 
  \hline
- Col1 & Col2 & Col2 & Col3 \\ [0.5ex] 
+ List of Requirements \\ [0.5ex] 
  \hline\hline
- 1 & 6 & 87837 & 787 \\ 
- 2 & 7 & 78 & 5415 \\
- 3 & 545 & 778 & 7507 \\
- 4 & 545 & 18744 & 7560 \\
- 5 & 88 & 788 & 6344 \\ [1ex] 
+ Identifying points of interest in the environment. \\ 
+ \hline
+ Detecting obstacles \\
+ \hline
+ Feeding back mapping information \\
+ \hline
+ Manually identifying obstacles in a space \\
+ \hline
+ Manually removing an obstacle from the map \\ 
+ \hline
+ Providing navigation for a user to a point of interest \\ 
+ \hline
+ Voice interactions - listing \\ 
+ \hline
+ Voice interactions - acceptance \\ 
+ \hline
+ Screen interactions - listing \\ 
+ \hline
+ Screen interactions - acceptance \\ 
+ \hline
+ Classification of obstacles/Points Of Interest \\ 
+ \hline
+ 3D Directional Sound \\ 
+ \hline
+ Head Gestures \\ 
+ \hline
+ IR and Ultrasound \\ 
+ \hline
+ Machine Vision \\ 
  \hline
 \end{tabular}
-\caption{Table to test captions and labels}
 \label{table:1}
 \end{table}
 
