added spacing and reference to table

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -152,7 +152,7 @@ In light of research described in the literature reviewed the team will be able 
 
 
 \subsection{Requirements}
-Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see Appendix xx for a full elaboration of our requirement patterns).
+Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see section \ref{Appendix} for a full description of our requirement patterns).
 \begin{table}[h!]
 \renewcommand{\arraystretch}{1.5}
 \centering
@@ -241,7 +241,7 @@ Talk about the migration plan to Azure.\\
 
 % Appendix
 \appendix
-\section*{APPENDIX}
+\section*{APPENDIX} \label{Appendix}
 \setcounter{section}{1}
 
 \appendixhead{ZHOU}
