--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -17,6 +17,8 @@
 \usepackage[ruled]{algorithm2e}
 \usepackage{textcomp}
 \usepackage{gensymb}
+\usepackage[utf8]{inputenc}
+\usepackage[table]{xcolor}
 \renewcommand{\algorithmcfname}{ALGORITHM}
 \SetAlFnt{\small}
 \SetAlCapFnt{\small}
@@ -158,7 +160,7 @@ Table \ref{table:1} shows a list of requirements our sytem will fulfill (please 
 \centering
 \begin{tabular}{| l ||} 
  \hline
- List of Requirements \\ [0.5ex] 
+ \cellcolor[HTML]{6F3B50} List of Requirements \\ [0.5ex] 
  \hline\hline
  Identifying points of interest in the environment. \\ 
  \hline
