added some sensor fusion example

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -160,35 +160,35 @@ In light of research described in the literature reviewed the team will be able 
 
 %TODO: citation 
 
-The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.
-
+The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in strategically predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.\\\\
 The use cases that were to be explored were centered around detecting gestures and possible indoor location possibilities.\\
 However, soon after the project was presented to the team the hardware was found to have several limitations. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
-This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\
+This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\\\
 %TODO: citation
-Another limitation of the hardware is that it only functions if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the usefulness of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment.\\
+Furthermore the hardware can only functions if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the practicality of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment such as static or movable objects.\\\\
 %TODO: citation
-Our initial contact with the client was a brainstorming session where he expressed his vision for the project. Ideas were then bounced around and a subject area was found that was open for research and of value to our client.\\
+Our initial contact with the client was a brainstorming session where he expressed his vision for the project. He expressed his desire to have an end product which would feel natural to the user with very little on the user's part in terms of learning getting themselves familiar with the product. Then he raised the idea of using a sensor or combination of wearbale sensors to achieve the ultimate goal. Ideas were then bounced around and a subject area was found that was open for research and of value to our client.\\\\
 Microsoft Research have done some investigation into using Sensor Fusion
 %TODO: citation
-and wanted to see what applications for that technology in aiding the visually impaired.
-After the meeting the team met several times to brainstorm and research possible applications and decided on a few possible project proposals.
-These were presented to the client and he expressed interest in continuing with one of them.\\
+and wanted to see what applications for that technology in aiding the visually impaired. Sensor Fusion was introduced into window 8 Operating system to provide stabiility to applications relying on clean and stabilised data. \cite{Sinofsky Steven} described a siutation where Engnineers at Microsoft attempted to map a 3D virtual environment to a real Environment in an app through a tabelt. First of all they tried emulate up and down movements in the virtual environment using an accelerometer. Almost immediately they encountered an issue when tilting the tablet and holding the tablet in a stationary position. Noise coming from the accelerometer alone caused jittery movements in the applications. To achieve a much more stable movement, the accelerometer readings was passed through a low-pass filter. The low-pass filter fulfilled its duty but simultaneously introduced a bottleneck into the app. Movement was significantly smoother but the motion in the app felt unresponsive and sluggish. The engineers also used a 6-axis compass which is a 3D accelerometer and 3D magnetometer to emulate left and right movements however it did not yield practicable result due to the instability of the 6-axis sensor. Finally the engineers hit a breakthrough with sensor fusion using the 3D accelerometer, 3D magnetometer and 3D gyroscope. Data collected from all 9-axis resulted in a smooth and fluid experience in the virtual app. Additionally the sensors complemented each other in terms of areas where they fell short \cite{Sinofsky Steven}.
+
+After the meeting the team met several times to brainstorm and research possible applications around the sensor fusion concept and decided on a few possible project proposals.
+These were presented to the client and he expressed interest in continuing with one of them.\\\
 For the final project proposal our client agreed on a research area that will help the visually impaired navigate an indoor environment.
 Using sensor fusion the team was to build a system that can collect data from various disparate sensors and identify the location of the user and obstacles in it's environment.
-The goals is to use cheap, of-the-shelf, sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
+The goals is to use cheap, of-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
 
 \subsection{High level goals}
 
 
 \subsection{Requirements}
 Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see section \ref{Appendix} for a full description of our requirement patterns).
-\begin{table}[h!]
+
 \renewcommand{\arraystretch}{1.5}
 \centering
 \begin{tabular}{| l ||} 
  \hline
- \cellcolor[HTML]{6F3B50} List of Requirements \\ [0.5ex] 
+ \rowcolor{lightgray} List of Requirements \\ [0.5ex] 
  \hline\hline
  Identifying points of interest in the environment. \\ 
  \hline
@@ -222,7 +222,6 @@ Table \ref{table:1} shows a list of requirements our sytem will fulfill (please 
  \hline
 \end{tabular}
 \label{table:1}
-\end{table}
 
 \subsection{System Architecture}
 % TODO: make a good argument for how we managed RISK
