--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -161,9 +161,7 @@ In light of research described in the literature reviewed the team will be able 
 %TODO: citation 
 
 The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in strategically predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.\\\\
-The use cases that were to be explored were centered around detecting gestures and possible indoor location possibilities.\\
-However, soon after the project was presented to the team the hardware was found to have several limitations. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
-This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\\\
+The use cases that were to be explored were centered around detecting gestures and possible indoor location possibilities. However, soon after the project was presented to the team the hardware was found to have several limitations. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters. This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.
 %TODO: citation
 Furthermore the hardware can only functions if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the practicality of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment such as static or movable objects.\\\\
 %TODO: citation
@@ -177,12 +175,12 @@ These were presented to the client and he expressed interest in continuing with 
 For the final project proposal our client agreed on a research area that will help the visually impaired navigate an indoor environment.
 Using sensor fusion the team was to build a system that can collect data from various disparate sensors and identify the location of the user and obstacles in it's environment.
 The goals is to use cheap, of-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
-
 \subsection{High level goals}
 
 
 \subsection{Requirements}
-Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see section \ref{Appendix} for a full description of our requirement patterns).
+
+Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see section \ref{Appendix} for a full description of our requirement patterns).\\
 
 \renewcommand{\arraystretch}{1.5}
 \centering
