Added template for laying figures side by side

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -249,6 +249,42 @@ Show how our integration and load testing evaluates our architecture and a discu
 \section{Evaluation}
 Metrics and graphs showing the performance of certain parts of the project.
 
+\iffalse
+% TODO: \begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \caption{A subfigure}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \caption{A subfigure}
+  \label{fig:sub2}
+\end{subfigure}
+\caption{A figure with two subfigures}
+\label{fig:test}
+\end{figure}
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \captionof{figure}{A figure}
+  \label{fig:test1}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \captionof{figure}{Another figure}
+  \label{fig:test2}
+\end{minipage}
+\end{figure}
+\fi
+
 \section{Life cycle and Future Work}
 \subsection{Current state}
 Describe the current state of the project\\
