Added template for laying figures side by side

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -250,7 +250,7 @@ Show how our integration and load testing evaluates our architecture and a discu
 Metrics and graphs showing the performance of certain parts of the project.
 
 \iffalse
-% TODO: \begin{figure}
+\begin{figure}
 \centering
 \begin{subfigure}{.5\textwidth}
   \centering
@@ -266,22 +266,21 @@ Metrics and graphs showing the performance of certain parts of the project.
 \end{subfigure}
 \caption{A figure with two subfigures}
 \label{fig:test}
-\end{figure}
 
-\begin{figure}
-\centering
-\begin{minipage}{.5\textwidth}
+\begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[width=.4\linewidth]{image1}
-  \captionof{figure}{A figure}
-  \label{fig:test1}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
+  \caption{A subfigure}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[width=.4\linewidth]{image1}
-  \captionof{figure}{Another figure}
-  \label{fig:test2}
-\end{minipage}
+  \caption{A subfigure}
+  \label{fig:sub2}
+\end{subfigure}
+\caption{A figure with two subfigures}
+\label{fig:test}
 \end{figure}
 \fi
 
