--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -173,8 +173,8 @@ and wanted to see what applications for that technology in aiding the visually i
 After the meeting the team met several times to brainstorm and research possible applications around the sensor fusion concept and decided on a few possible project proposals.
 These were presented to the client and he expressed interest in continuing with one of them.\\\
 For the final project proposal our client agreed on a research area that will help the visually impaired navigate an indoor environment.
-Using sensor fusion the team was to build a system that can collect data from various disparate sensors and identify the location of the user and obstacles in it's environment.
-The goals is to use cheap, of-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
+Using sensor fusion the team was to build a system that can collect data from various disparate sensors and identify the location of the user and obstacles in its environment.
+The goal is to use cheap, of-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
 \subsection{High level goals}
 
 
@@ -186,7 +186,7 @@ Table \ref{table:1} shows a list of requirements our sytem will fulfill (please 
 \centering
 \begin{tabular}{| l ||} 
  \hline
- \rowcolor{lightgray} List of Requirements \\ [0.5ex] 
+ \rowcolor{lightgray}\multicolumn{1}{c}{List of Requirements} \\ [0.5ex] 
  \hline\hline
  Identifying points of interest in the environment. \\ 
  \hline
