Added subsections for the architecture

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -18,6 +18,9 @@
   publisher = {IEEE Press},
   address = {Piscataway, NJ, USA},
 } 
+@article{SinofskySteven,
+  author = {Steven,Sinofsky}
+} 
 
 @Article{ Cardin2007,
   author="Cardin, Sylvain and Thalmann, Daniel and Vexo, Fr{\'e}d{\'e}ric",
