--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -183,7 +183,8 @@ The goal is to use cheap, of-the-shelf sensors and mitigate any error in the sen
 Table \ref{table:1} shows a list of requirements our sytem will fulfill (please see section \ref{Appendix} for a full description of our requirement patterns).\\
 
 \renewcommand{\arraystretch}{1.5}
-\centering
+
+\begin{center}
 \begin{tabular}{| l ||} 
  \hline
  \rowcolor{lightgray}\multicolumn{1}{c}{List of Requirements} \\ [0.5ex] 
@@ -220,23 +221,30 @@ Table \ref{table:1} shows a list of requirements our sytem will fulfill (please 
  \hline
 \end{tabular}
 \label{table:1}
+\end{center}
 
 \section{System Architecture}
 \label{architecture}
-Given the goals the team and the client set for this project there were several considerations to be made to make the architecture flexible and performant enough to satisfy the requirements. Having the requirement of being able to accept data from many kinds of sensors made it clear that the architecture had to be made up of a variety of strategies to homogenise the incoming data into a stream of measurements that could be processed in a more abstract way.
+Given the goals the team and the client set for this project there were several considerations to be made to make the architecture flexible and performant enough to satisfy the requirements. Having the requirement of being able to accept data from many kinds of sensors made it clear that the architecture had to be made up of a variety of strategies to homogenize the incoming data into a stream of measurements that could be processed in a more abstract way.
 
 \subsection{Data collection}
+Since data reaching our platform will be produced from various sources, it was of paramount importance that we build a system whereby huge amount of data can be collected and aggregated for further processing as at when needed. After much consideration, we decided to include Apache Kafka and Apache Zookeeper into our overall System Architecture. Apache Kafka is a distributed publish/subscriber message queuing system that provides fault tolerance, high throughput for both publishing and subscribing tasks, supports multiple consumer, holds messages on disk for latter consumption in bulk and could also be used as a commit log service. Apache Zookeeper is a service that provides synchronization across a cluster in a distributed network. Zookeeper assists kafka in maintaining order across a Kafka cluster, it maintains properties such its configuration and leader election should a leader in the cluster fails to exist. Both Apache Kafka and Apache Zookeeper have the capability of scaling out. Additional kafka brokers can be added to the cluster depending on the requirements of the architecture, as well as additional zookeeper servers can be included but will have a master zookeeper server to oversee events in the distributed zookeeper network.
 
-\subsection{Aggregation}
+\subsection{Aggregation} 
+Apache Kafka and Apache Spark
 
-\subscetion{Processing}
+\subsection{Processing}
+Apache Spark
 
 \subsection{Feedback}
+I think Android App?
 
 % TODO: make a good argument for how we managed RISK
 
 \section{Implementation}
 As described in section~\ref{architecture} the chosen architecture uses a variety of different technologies to achieve its goal. Each component therefore had a predefined best practice in implementation.
+
+Before diving into suitability arguments for chosen architecture, it would be of immense importance to discuss how components in our architecture will interact with each other. A socket on our VPS will be listening indefinitely on a particular port for incoming data from our various sensing hardware. Each sensor or combination of sensors will measure data, do some preprocessing before sending data across to our VPS over a UDP connection. For instance one of the CS students would send three distance estimates based on the measurements collected from 2 ultrasound and 1 infrared sensor. At the listening end we would essentially do a partial deserialisation to obtain the topics from each packet. Afterwards the packet 
 
 % Why Java for 
 
@@ -247,7 +255,7 @@ As described in section~\ref{architecture} the chosen architecture uses a variet
 \section{Project Management}
 % Discuss 
 The team consists of 8 Masters students, 4 are doing a conversion course in Computer Science and 4 are doing Software Systems Engineering. As discussed earlier the 4 CS students are each responsible for a data collection or feedback application that would be the topic of their dissertation project.
-The roal of the SSE team with regards to the CS students was to coordinate their efforts towards creating value for the client and to provide them with guidance with the implementation and architecture of their projects.
+The role of the SSE team with regards to the CS students was to coordinate their efforts towards creating value for the client and to provide them with guidance with the implementation and architecture of their projects.
 
 \subsubsection{Processes}
 Describe tools and processes, Scrum, Kanban etc.
